test/LitTests/SemanticAnalysis/LifetimeMethods/InvalidReturnTypeSetInvalid.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__setinvalid' has incorrect return type
	int __setinvalid() noexcept {
		return 0;
	}
}

// CHECK: 1 error generated.
